Updates on Blues for Alice.

--- a/ch2-notes.tex
+++ b/ch2-notes.tex
@@ -142,15 +142,15 @@
   calls it the ``descending blues'' (\headlesscite[228]{levine:1995}). Like many
   sets of Parker changes, there are many different versions; the changes here
   represent a mediation of these sources. \emph{The Real Book} gives \h{Am7} (a
-  vi chord) instead of \h{F7} in m.~10; Levine's \emph{Jazz Thoery Book} gives
-  \h{Db7} (a tritone substitute) instead of \h{G7} in the second half of m.~3
-  and does not include the seventh in the \h{F7} of m.~10; and the \emph{Charlie
-  Parker Omnibook} omits both \h{D7} chords (the first in the second half of
-  m.~7, the second in m.~11).\nocite{aebersold:omnibook} Most of these
-  differences are minor, and over the course of a recorded performance the
-  changes might vary among all of these versions. Other compositions that
-  contain this progression include Parker's own ``Confirmation,'' Sonny Stitt's
-  ``Jack Spratt,'' and Toots Thielemans's ``Bluesette.''}
+  vi chord) instead of \h{FM7} in m.~10; Levine's \emph{Jazz Theory Book} gives
+  \h{Db7} (a tritone substitute) instead of \h{G7} in the second half of m.~3;
+  and the \emph{Charlie Parker Omnibook} omits both \h{D7} chords (the first in
+  the second half of m.~7, the second in m.~11) and the tonic in m.~11 is an
+  F7.\nocite{aebersold:omnibook} Most of these differences are minor, and over
+  the course of a recorded performance the changes might vary among all of these
+  versions. Other compositions that contain this progression include Parker's
+  own ``Confirmation,'' Sonny Stitt's ``Jack Spratt,'' and Toots Thielemans's
+  ``Bluesette.''}
 
 \fntext{tft-6}{%
   The major-minor seventh chord as a stable chord is characteristic of the
@@ -163,9 +163,16 @@
   At least, impossible if we want to stay within the three sets we are
   studying in this chapter. Like the other transformations we have defined, EC
   is an admissible transformation on the set of all mod-12 ordered triples: if
-  we begin with a \h{Dm7} chord, EC gives us $(2, 5, 0) \ECarrow\ (7, 10, 3)$,
+  we begin with a \h{Dm7} chord, EC gives us $(2, 5, 0) \ECarrow\ (7, 10, 4)$,
   which of course is not a major, minor, or dominant seventh chord.}
 
+\fntext{tft-8}{%
+  A ``turnaround'' is what jazz musicians call a short progression that leads
+  from a chord (often a tonic chord) back to itself. They appear most commonly
+  at the ends of forms, and provide harmonic interest during solos, when a
+  player might play several choruses in a row. The \tf appears frequently in
+  this formal location, as do many of its variants: \mbox{vi--ii--V},
+  \mbox{iii--VI--ii--V}, \mbox{iii--\h{bIII7}--ii--\h{bII7}}, etc.}
 
 %}}}
 
