--- a/ch2.tex
+++ b/ch2.tex
@@ -522,12 +522,12 @@ m.~9 of the twelve-bar form.
 \begin{figure}[thbp]
   \centerGraphic{eps/xxx.pdf}
   \caption{An analysis of ``Blues for Alice'' in \tf space.}
-  \label{tft:blues-alice-network}
+  \label{tft:blues-alice-space}
 \end{figure}
 
 
 Parker elaborates this basic structure with a series of stepwise descending
-\tf progressions (see Figure \ref{tft:blues-alice-network}). The first of
+\tf progressions (see Figure \ref{tft:blues-alice-space}). The first of
 these is a diatonic descent: m.~2 jumps from the tonic F  major to a \tf in D,
 which resolves (via the \textsc{7th} and \textsc{3rd} transformations) to a
 \h{Dm7} chord as the ii\tsup{7} of C major. We first saw this progression in
@@ -582,7 +582,7 @@ earlier descending fifths pattern:
 
 \begin{center}
   \h{Bbm7} \TFTarrow\ \h{Eb7} \ECTarrow\
-  \h{Am7}  \TFTarrow\ \h{D7}   \ECTarrow\
+  \h{Am7}  \TFTarrow\ \h{D7}  \ECTarrow\
   \h{Abm7} \TFTarrow\ \h{Db7} \ECTarrow\
   \h{Gm7}
 \end{center}
@@ -590,16 +590,31 @@ earlier descending fifths pattern:
 \noindent (Here, EC\tsub{T} is the tritone-substituted variant of EC,
 equivalent to \tft $\cdot$ \textsc{7th} $\cdot$ \textsc{3rd}, applied to a
 dominant seventh chord.) Once this sequence arrives on \h{Gm7} as the ii chord
-of the tonic F, there is a \tfo progression in the home key (the tonic chord
-now appears with the characteristic lowered seventh, so the transformation is
-again TF $\cdot$ \textsc{7th}). After the resolution in m.~11, the progression
-moves backwards through fifths space to begin a VI--ii--V turnaround to F
-major to begin the next chorus.
+of the tonic F, there is a \tfo progression in the home key. After the
+resolution in m.~11, the progression moves backwards through fifths space to
+begin a VI--ii--V turnaround to F major to begin the next chorus.\fn{tft-8}
 
-% how the space doesn't tell us everything: Fmaj7 to Em7 is very close in
-% terms of voice leading, but not functionally ...BUT
+So far, we have not said very much about the first two chords in ``Blues for
+Alice'': \h{FM7}--\h{Em7}. In \tf space, these chords are relatively far
+apart (4 edges): \h{FM7} $\xrightarrow{\text{\textsc{7th}}}$ \h{F7} $\xrightarrow{T_6}$
+\h{B7} $\xrightarrow{T_5}$ \h{E7} $\xrightarrow{\text{\textsc{3rd}}}$ \h{Em7}.
+Because \tf space prioritizes functional relationships, chord progressions
+that are close in terms of voice leading often appear quite distant in the
+space. In reality, a musician would probably \emph{not} think of this move as
+being harmonically distant, since the two chords are so close to one another
+in pitch space: to rephrase again in Lewinnian terms, the ``characteristic
+motion'' that does the best job in taking us from \h{FM7} to \h{Em7} is
+something like ``move the root down a half step and both the third and seventh
+down a whole step.'' This transformation is easy enough to define, but would
+not be part of \tf space proper; inevitably, the space cannot tell us
+everything we want to know about jazz harmony. The space is designed to show
+typical harmonic motions, so progressions that do not seem to lie well in \tf
+space often demand other explanations.
+
+% return to this later, to talk about this compared to diatonic space:
 % FM7 --> Em7 is very close to the voice leading of the bridge (if you infer a
 % Bb7 chord, then you get FM7 ---> Bb7 ---(ECt)---> Em7
+
 
 %}}} analytical applications
 
