Add Blues for Alice space example

--- a/ch2.tex
+++ b/ch2.tex
@@ -513,15 +513,16 @@ will serve as a useful first example (the changes are given in Example
 present: the tune arrives on a subdominant in m.~5, and on a home-key \tf in
 m.~9 of the twelve-bar form.
 
-\begin{example}[tbhp]
+\begin{example}[tbp]
   \centerGraphic[width=24em]{eps/ch2/blues-alice-changes.pdf}
   \caption{Changes to ``Blues for Alice'' (Charlie Parker).}
   \label{tft:blues-alice-changes}
 \end{example}
 
-\begin{figure}[thbp]
-  \centerGraphic{eps/xxx.pdf}
-  \caption{An analysis of ``Blues for Alice'' in \tf space.}
+\begin{figure}[tbp]
+  \centerGraphic[width=\textwidth]{eps/ch2/blues-alice-space.pdf}
+  \caption[An analysis of ``Blues for Alice'' in \tf space]{An analysis of
+    ``Blues for Alice'' in \tf space: mm.~1--5 (left), mm.~6--11 (right).}
   \label{tft:blues-alice-space}
 \end{figure}
 
