Change all "Examples" to "Figures."
JH says (and I agree) that the distinction between Examples and Figures
is artificial, since most of the "Examples" are just chord changes.

--- a/ch1.tex
+++ b/ch1.tex
@@ -529,7 +529,7 @@ examples.
 \subsection{Intervals and Transformations}
 \label{subsec:inttrans} % {{{{
 
-Example \ref{ds:autumn-leaves-changes} shows the chord changes to the A section
+Figure \ref{ds:autumn-leaves-changes} shows the chord changes to the A section
 on the jazz standard “Autumn Leaves.”\fn{ds-2a} Jazz musicians sometimes refer
 to this progression as a “diatonic cycle”: it uses only seventh-chords found
 in the G-minor diatonic collection.\fn{ds-2b} As in classical music, the leading
@@ -538,11 +538,11 @@ tone is raised in the dominant chord so that the resulting chord is \h{D7}, not
 circle of fifths, placing the tonic G minor at the top of the circle (see
 Figure \ref{ds:circle-of-fifths}).
 
-\begin{example}[thbp]
+\begin{figure}[thbp]
   \centerGraphic{eps/ch1/autumn-leaves-changes.pdf}
   \caption{The changes to “Autumn Leaves” (Joseph Kosma), A section.}
   \label{ds:autumn-leaves-changes}
-\end{example}
+\end{figure}
 
 \begin{figure}[htbp]
   \centerGraphic{eps/ch1/circle-of-fifths.pdf}
@@ -746,7 +746,7 @@ want to emphasize the idea of a transformation as a mapping operation.
 
 Now that we have explored the underlying mathematics, we are in a position to
 reexamine the A section of “Autumn Leaves,” (as given in
-Example~\ref{ds:autumn-leaves-changes}), as well as the circle-of-fifths
+Figure~\ref{ds:autumn-leaves-changes}), as well as the circle-of-fifths
 arrangement in Figure~\ref{ds:circle-of-fifths}. The progression is, quite
 simply, a series of $t_3$ operations within the G-minor diatonic space; each
 chord root descends by diatonic fifth. In a mod-12 chromatic space (like the
@@ -783,7 +783,7 @@ theorists.
 
 Before concluding this chapter, I want to examine “Autumn Leaves” in a bit
 more detail, then move on to a few other analytical examples. The full chord
-changes to “Autumn Leaves” are given in Example
+changes to “Autumn Leaves” are given in Figure
 \ref{ds:autumn-leaves-complete}. The opening A section, discussed at length
 above, can be understood as a series of $t_3$ operations in the G-minor
 diatonic set. The bridge modulates to the relative major, but we can still
@@ -795,11 +795,11 @@ this modulation, the connections from chord to chord are all $t_3$ operations,
 continuing the chain that has been present since the beginning (see Figure
 \ref{ds:autumn-leaves-bridge}).\fn{ds-11a}
 
-\begin{example}[h!tbp]
+\begin{figure}[h!tbp]
   \centerGraphic{eps/ch1/autumn-leaves-complete.pdf}
   \caption{The complete changes to “Autumn Leaves.”}
   \label{ds:autumn-leaves-complete}
-\end{example}
+\end{figure}
 
 \begin{figure}[htbp]
   \vspace{\baselineskip}
@@ -851,7 +851,7 @@ Leaves” (though Bart Howard’s “Fly Me to the Moon” comes close); instead
 pieces often make use of diatonic cycles in only a portion of a piece before
 moving on to contrasting music. A relatively straightforward example of this
 is Sammy Fain and Bob Hilliard’s “Alice in Wonderland,” the changes to which
-are shown in Example \ref{ds:wonderland-changes}.\fn{ds-13} Like “Autumn
+are shown in Figure \ref{ds:wonderland-changes}.\fn{ds-13} Like “Autumn
 Leaves,” “Alice in Wonderland” begins with a minor diatonic cycle in mm.~1--7
 (also beginning on a iv chord), shown here in A minor. We can modify our \gis{}
 from above simply by changing the set ($S$ is now the set \{\h{Am}, \h{Bm7b5},
@@ -860,12 +860,12 @@ interval function are identical.\fn{ds-13a} The harmony in m.~7 is an \h{Am7} ch
 but because the quality of the tonic seventh chord is ambiguous in minor
 keys, this chord is easily understood as tonic.
 
-\begin{example}[htbp]
+\begin{figure}[htbp]
   \centerGraphic{eps/ch1/wonderland-changes.pdf}
   \caption{Changes to “Alice in Wonderland” (Sammy Fain/Bob Hilliard), mm.\
   1--16.}
   \label{ds:wonderland-changes}
-\end{example}
+\end{figure}
 
 The second eight measures are all diatonic in the key of C major; the linking
 \h{Eb7} chord signals a shift between diatonic collections.\fn{ds-14} This
@@ -921,7 +921,7 @@ is a relatively unusable tonal progression.
 \end{figure}
 
 Nevertheless, Earl Zindars’s standard “How My Heart Sings” (the changes to
-which are given in Example \ref{ds:heart-sings-changes}) does indeed contain a
+which are given in Figure \ref{ds:heart-sings-changes}) does indeed contain a
 major-key cycle.\fn{ds-17} Unlike the previous two examples, this tune begins
 on the iii chord, at which point it begins the $t_3$ cycle. Once again, it is
 the \h{Am7} chord that alerts us that this progression takes place in
@@ -930,11 +930,11 @@ harmonic sense, as the dominant of the following D minor). After reaching the
 tonic in m.~5, the $t_3$s continue making their way to A minor, four measures
 later.
 
-\begin{example}[htbp]
+\begin{figure}[htbp]
   \centerGraphic{eps/ch1/heart-sings-changes.pdf}
   \caption{Changes to “How My Heart Sings” (Earl Zindars), mm.~1--12.}
   \label{ds:heart-sings-changes}
-\end{example}
+\end{figure}
 
 Notably, the chord in m.~8 is an \h{E7b9}---this chord belongs not to C major,
 but rather to A minor. At some point, then, the progression shifts from taking
@@ -952,17 +952,17 @@ appears first as a minor seventh and again later as a dominant of the relative
 minor.
 
 One more example will suffice to conclude our discussion of diatonic cycles:
-Jerome Kern’s “All the Things You Are” (the changes are given in Example
+Jerome Kern’s “All the Things You Are” (the changes are given in Figure
 \ref{ds:all-things-changes}).\fn{ds-18a} Though this tune does not contain a
 cycle as explicit as the examples we have seen so far, viewing this piece
 through the lens of diatonic seventh chord space reveals relationships that may
 otherwise go unnoticed.
 
-\begin{example}[htbp]
+\begin{figure}[htbp]
   \centerGraphic{eps/ch1/all-things-changes.pdf}
   \caption{Changes to “All the Things You Are” (Jerome Kern).}
   \label{ds:all-things-changes}
-\end{example}
+\end{figure}
 
 “All the Things You Are” begins in the key of F minor, and progresses through
 a diatonic cycle (a chain of $t_3$ operations in an F-minor diatonic
