--- a/ch2.tex
+++ b/ch2.tex
@@ -31,16 +31,16 @@ and the only small-scale harmonic progression to have an entire Aebersold
 play-along volume dedicated to it.\fn{tf-1} The progression is so prevalent
 that many jazz musicians describe tunes in terms of their constituent \tf{}s;
 a musician might describe the bridge of “All the Things You Are” (shown in
-Example \ref{tf:all-things-bridge}) as being “\tf\ to G, \tf\ to E, then V--I
+Figure \ref{tf:all-things-bridge}) as being “\tf\ to G, \tf\ to E, then V--I
 in F.”\fn{tf-2} Given the importance of the progression for improvising jazz
 musicians, it seems natural to use the progression as the basis for developing
 a more general transformational model of jazz harmony.
 
-\begin{example}[tbp]
+\begin{figure}[tbp]
   \centerGraphic[width=20em]{eps/ch2/all-things-bridge.pdf}
   \caption{The bridge of “All the Things You Are” (Jerome Kern).}
   \label{tf:all-things-bridge}
-\end{example}
+\end{figure}
 
 \begin{figure}[tbp]
   \centerGraphic[width=15em]{eps/ch2/single-tfo-network.pdf}
@@ -163,7 +163,7 @@ representing a \tf, which we will call simply ``TF'':
 \vspace{-3em}
 
 \noindent Again, these definitions are designed to be musically relevant; the
-voice-leading diagram in Example \ref{tf:tfo-voice-leading} illustrates this
+voice-leading diagram in Figure \ref{tf:tfo-voice-leading} illustrates this
 more clearly.\fn{tf-6a} The root of the second chord is a fifth below the root of the
 first ($y_1 = x_1 + 5$), the third of the second chord is a semitone below the
 seventh of the first ($y_2 = x_3 - 1$), and the seventh of the second chord is
@@ -182,11 +182,11 @@ V\tsup{7} to a unique I\tsup{7}. As such, its inverse ($\mathrm{TF}^{-1}$) is
 well defined, and allows motion backwards along the arrows shown in the
 transformation graph in Figure \ref{tf:single-tfo-graph}.
 
-\begin{example}[htbp]
+\begin{figure}[htbp]
   \centerGraphic{eps/ch2/tfo-voice-leading.pdf}
   \caption{Voice leading in the \tfo\ progression.}
   \label{tf:tfo-voice-leading}
-\end{example}
+\end{figure}
 
 It is worth mentioning here that TF and \tft\ (which we will define in the
 next section) are well-defined operations for any ordered triple of members of
@@ -275,17 +275,17 @@ Though we will return to the formalism a bit later, we have defined enough of
 \tf\ space at this point to see how it might be useful in analysis. To do so,
 we will look at Lee Morgan's composition ``Ceora,'' first recorded on the
 album \emph{Cornbread} from 1965. The changes for the A section are given in
-Example \ref{tf:ceora-changes-1}, and the accompanying moves in \tf\ space are
+Figure \ref{tf:ceora-changes-1}, and the accompanying moves in \tf\ space are
 shown in Figure \ref{tf:ceora-space-1}.\fn{tf-10} ``Ceora'' is in the key of
 \Aflat\ major, and begins with the progression I--ii--V--I in the first three
 bars, staying within a single horizontal slice of \tf\ space. This is followed
 immediately by a \tfo\ progression in \Dflat, a fifth lower (mm.~4--5).
 
-\begin{example}[thbp]
+\begin{figure}[thbp]
   \centerGraphic[width=24em]{eps/ch2/ceora-changes-1.pdf}
   \caption{Changes for the A section of ``Ceora'' (Lee Morgan).}
   \label{tf:ceora-changes-1}
-\end{example}
+\end{figure}
 
 \begin{figure}[htbp]
   \centerGraphic{eps/ch2/ceora-space-1.pdf}
@@ -314,7 +314,7 @@ the \tf\ in C resolves at m.~15 to C minor, at which point the harmonic rhythm
 doubles and the progression follows the normal descending fifths pattern to
 reach the tonic that begins the B section in m.~17.
 
-The B section of ``Ceora'' (shown in Example \ref{tf:ceora-changes-2}) follows
+The B section of ``Ceora'' (shown in Figure \ref{tf:ceora-changes-2}) follows
 much of the same trajectory as the A section until the last four bars; the
 only differences are the addition of the \h{b5} in the \h{Cm7} and the \h{s9}
 in the \h{F7} in mm.~11--12 of the section. Because we have defined chords and
@@ -326,11 +326,11 @@ in tonic, resolving in m.~15 of the section. A final \tf\ in the last measure
 provides additional harmonic interest, and functions as a turnaround to lead
 smoothly back to \h{AbM7} to begin the next chorus.
 
-\begin{example}[htbp]
+\begin{figure}[htbp]
   \centerGraphic[width=24em]{eps/ch2/ceora-changes-2.pdf}
   \caption{Changes for the B section of ``Ceora'' (Lee Morgan).}
   \label{tf:ceora-changes-2}
-\end{example}
+\end{figure}
 
 At this point, we have successfully mapped all of the chords in ``Ceora'' to
 their associated locations in \tf\ space; it is reasonable to ask, though,
@@ -508,16 +508,16 @@ motion from \h{DbM7} to \h{Dm7} in mm.~5--6 of ``Ceora'' is indeed a typical
 
 Equipped with these new tritone-substitution transformations, we can now
 analyze somewhat more complicated music; Charlie Parker’s “Blues for Alice”
-will serve as a useful first example (the changes are given in Example
+will serve as a useful first example (the changes are given in Figure
 \ref{tft:blues-alice-changes}).\fn{tft-5} The essential structure of the blues is
 present: the tune arrives on a subdominant in m.~5, and on a home-key \tf in
 m.~9 of the twelve-bar form.
 
-\begin{example}[tbp]
+\begin{figure}[tbp]
   \centerGraphic[width=24em]{eps/ch2/blues-alice-changes.pdf}
   \caption{Changes to ``Blues for Alice'' (Charlie Parker).}
   \label{tft:blues-alice-changes}
-\end{example}
+\end{figure}
 
 \begin{figure}[tbp]
   \centerGraphic[width=\textwidth]{eps/ch2/blues-alice-space.pdf}
