--- a/mjmdiss.sty
+++ b/mjmdiss.sty
@@ -244,4 +244,8 @@
 \newcommand{\ECTarrow}{\ensuremath{\xrightarrow{\mathrm{EC}_\mathrm{T}}}}
 \newcommand{\intZ}{\ensuremath{\mathbb{Z}}}
 
+\newcommand{\Smin}{\ensuremath{S_{\mathrm{min}}}}
+\newcommand{\Sdom}{\ensuremath{S_{\mathrm{dom}}}}
+\newcommand{\Smaj}{\ensuremath{S_{\mathrm{maj}}}}
+
 %% end mjmdiss.sty %%
