Fix some minor things in ch 1.

--- a/ch1-notes.tex
+++ b/ch1-notes.tex
@@ -255,7 +255,7 @@
   typically follow conventions used by \emph{The Real Book}.}
 
 \fntext{ds-2c}{%
-  \cite[Definition 2.3.1 (26)]{lewin:gmit}. \emph{GMIT} contains many terms
+  \Cite[Definition 2.3.1 (26)]{lewin:gmit}. \emph{GMIT} contains many terms
   that Lewin renders in all capitals; I have rendered them here in small
   capitals (except when quoting directly) in order to reduce their typographical
   impact.}
@@ -310,7 +310,7 @@
   in \headlesscite[172--77]{hook:2007gmit}.}
 
 \fntext{ds-9}{%
-  The operator $t_k$ is described as a “generic transposition operator” in
+  The operator $t_k$ is described in as a “generic transposition operator” in
   \cite{hook:2014}. I refer to it here as “diatonic” rather than “generic”
   since I am interested at this point only in its application to the G-minor
   diatonic set S.}
@@ -419,3 +419,8 @@
   % }}}}
 
 % }}}
+
+%%% Local Variables: %%%
+%%% mode: LaTeX %%%
+%%% TeX-master: "diss" %%%
+%%% End: %%%
