--- a/ch1.tex
+++ b/ch1.tex
@@ -24,7 +24,7 @@ the course of a particular jazz performance, so it seems appropriate to focus
 our analytical attention on it.
 
 Jazz is essentially a harmonic music. In a typical jazz performance, the melody
-of the piece is only heard twice (at the beginning and the end), while the
+of the piece is heard only twice (at the beginning and the end), while the
 harmonic structure is heard throughout, determining the structure of the
 performance. Each soloist typically plays one or more “choruses,” where each
 chorus is understood as a single iteration of the piece’s harmonic structure.
@@ -76,11 +76,12 @@ Since the pioneering work of George Russell in the late 1950s, many jazz
 musicians conceive of an equivalence between a harmony (a chord symbol) and a
 scale.\footcite{russell:lcc} The chord symbol \h{Dm7} might imply a D dorian
 scale, for example, rather than simply the notes D--F--A--C. Because any of
-the notes of this scale will sound relatively good over a \h{Dm7} chord, the
-chord symbol acts as a convenient shorthand for a particular “way of playing.”
-This equivalence between chords and scales will be the focus of Chapter 4; for
-now it enough to note that understanding jazz harmony often involves more than
-understanding relationships between four-voice seventh chords.
+the notes of this scale will sound relatively consonant over a \h{Dm7} chord,
+the chord symbol acts as a convenient shorthand for a particular “way of
+playing” for a jazz improvisor. This equivalence between chords and scales
+will be the focus of Chapter 4; for now it enough to note that understanding
+jazz harmony often involves more than understanding relationships between
+four-voice seventh chords.
 
 When analyzing jazz harmony, it is often difficult to determine exactly what
 one should be analyzing. Lead sheets as circulated in fake books can be highly
@@ -96,7 +97,7 @@ knowledge, not written down and learned only from more experienced musicians.
 
 Many published jazz analyses rely on transcriptions of particular performances
 as a way to avoid some of these issues. In general, this solution works well,
-and I will certainly make use of them from time to time. This study, however,
+and I will certainly make use of transcriptions from time to time. This study, however,
 is interested in harmony more generally, and transcriptions can confuse
 matters somewhat. The kinds of questions I am interested in answering are of
 the type “What can we say about harmony in the piece ‘Autumn Leaves?’” and
@@ -297,7 +298,7 @@ Larson’s answer to the first question is yes. Many of Schenker’s own methods
 were of course developed for improvisatory music, and even if they had not
 been, they have proven to be explanatory for such music.\fn{ta-11} I agree
 with Larson on this point, and don’t have anything in particular to add.
-Certainly we should not expect that our theories can only prove useful for the
+Certainly we should not expect that our theories can prove useful only for the
 music for which they are designed; in fact as theorists we generally hope that
 the opposite is true, and that our theories have broader applications than
 originally intended!
@@ -324,6 +325,7 @@ analysis has proven explanatory, after all, for music that was doubtlessly
 composed without Schenkerian methods in mind (namely, music written before
 Schenker’s birth). Nevertheless, Larson spends a great deal of time addressing
 this particular point, so we should see to it here as well.
+
 
 After dismissing the possible intentional fallacy of this question, Larson
 turns to pianist Bill Evans as an example of how a jazz musician could produce
@@ -363,7 +365,7 @@ was well established by that time).\fn{ta-14}
 
 Larson allows that the first objection is justified: “That Evans was an
 unusually talented improviser---and that Schenkerian analysis can show
-this---is a principle argument of this article.”\footcite[239]{larson:1998}
+this---is a principal argument of this article.”\footcite[239]{larson:1998}
 This statement is representative of the legitimizing enterprise of the
 application of Schenker’s methods to jazz mentioned above. It also contains a
 dangerous implication, made explicit in Larson’s closing paragraphs:
@@ -691,7 +693,7 @@ of the book:
   Given locations s and t in our space, this attitude does not ask for some
   observed measure of extension between reified “points”; rather it asks: “If
   I am \emph{at} s and wish to get to t, what characteristic gesture
-  (e.g.~member of TRANS) should I perform in order to arrive
+  (e.g.~member of STRANS) should I perform in order to arrive
   there?\fn{ds-6}
 \end{quoting}
 
@@ -732,17 +734,18 @@ interval in semitones between the two pitches: the interval between C and
 \Eflat\ is 3, and the operator $T_3$ maps C onto \Eflat.
 
 Converting our “Autumn Leaves” \gis{} into a transformational system, then, is
-only slightly more complicated, since ordinary transposition will not work
-intuitively. To avoid confusion with the traditional transposition operator,
-we will instead use the lowercase, $t_k$.\fn{ds-9} This diatonic transposition
-operator will be used in almost the same way, however: the operation $t_k$ is
-that transposition which transposes the root of a chord $k$ steps inside the
-G-minor diatonic collection. With this understanding, the conversion works as
-expected: the interval between \h{Am7b5} and \h{D7} is 3, so the operator
-$t_3$ maps \h{Am7b5} onto \h{D7} in the space \mbox{$S =$ \{\h{Gm},}
-\h{Am7b5}, \h{BbM7}, \h{Cm7}, \h{D7}, \h{EbM7}, \h{F7}\}.\fn{ds-10} The same
-statement may also be written as \h{Am7b5} $\overset{t_3}{\lra}$ \h{D7}, if we
-want to emphasize the idea of a transformation as a mapping operation.
+only slightly more complicated than this pitch-class space example, since
+ordinary transposition will not work intuitively. To avoid confusion with the
+traditional transposition operator, we will instead use the lowercase,
+$t_k$.\fn{ds-9} This diatonic transposition operator will be used in almost
+the same way, however: the operation $t_k$ is that transposition which
+transposes the root of a chord $k$ steps inside the G-minor diatonic
+collection. With this understanding, the conversion works as expected: the
+interval between \h{Am7b5} and \h{D7} is 3, so the operator $t_3$ maps
+\h{Am7b5} onto \h{D7} in the space \mbox{$S =$ \{\h{Gm},} \h{Am7b5}, \h{BbM7},
+\h{Cm7}, \h{D7}, \h{EbM7}, \h{F7}\}.\fn{ds-10} The same statement may also be
+written as \h{Am7b5} $\overset{t_3}{\lra}$ \h{D7}, if we want to emphasize the
+idea of a transformation as a mapping operation.
 
 Now that we have explored the underlying mathematics, we are in a position to
 reexamine the A section of “Autumn Leaves,” (as given in
@@ -766,12 +769,14 @@ we have gone through a great deal of mathematical rigmarole simply to arrive
 back at our starting point. There would seem to be very little difference
 between describing a progression as a “diatonic cycle” and describing it as “a
 series of $t_3$ transformations in the G-minor diatonic set of seventh
-chords.” And yet, this is almost exactly the point. By beginning with
-something jazz musicians know and then applying transformational techniques,
-we can demonstrate that the gap between the way jazz musicians discuss harmony
-need not be far removed from the way music theorists discuss jazz harmony. The
-mathematical techniques used by the theory (in addition to enabling insights
-we may not otherwise consider) can help us to translate what is often
+chords.” And yet, this is almost exactly the point.
+% xxx rewrite this sentence
+By beginning with something jazz musicians know and then applying
+transformational techniques, we can demonstrate that the gap between the way
+jazz musicians discuss harmony need not be far removed from the way music
+theorists discuss jazz harmony.
+The mathematical techniques used by the theory (in addition to enabling
+insights we may not otherwise consider) can help us to translate what is often
 intuitive knowledge for jazz musicians to a language more familiar to music
 theorists.
 
@@ -836,15 +841,15 @@ formal boundary, as shown in Figure \ref{ds:displaced-cycle}.\fn{ds-12}
   \label{ds:displaced-cycle}
 \end{figure}
 
-The only four chords in “Autumn Leaves” that cannot be understood in the \gis{}
-developed above are those in the progression
-\h{Gm7}--\h{C7}--\h{Fm7}--\h{Bb7}.  While the chord roots belong to the
-G-minor collection, the qualities are incorrect. This progression consists of
-two \mbox{ii\tsup{7}--V\tsup{7}} progressions, the first in F and the second
-in \Eflat\ (a tonic that again does not appear in the music, like at the end
-of the bridge). These \tf\ progressions are best stood in chromatic, rather
-than diatonic, space; for now, we will pass over this progression until we
-have developed such a space.
+The only four chords in “Autumn Leaves” that cannot be understood in the
+\gis{} developed above are those in the progression
+\h{Gm7}--\h{C7}--\h{Fm7}--\h{Bb7}. While the chord roots belong to the G-minor
+collection, the qualities are incorrect. This progression consists of two
+\mbox{ii\tsup{7}--V\tsup{7}} progressions, the first in F and the second in
+\Eflat\ (a tonic that, like the one at the end of the bridge, does not
+actually appear in the music). These \tf\ progressions are best situated in
+chromatic, rather than diatonic, space; for now, we will pass over this
+progression until we have developed such a space.
 
 It is relatively rare for tunes to be as systematically diatonic as “Autumn
 Leaves” (though Bart Howard’s “Fly Me to the Moon” comes close); instead,
@@ -1053,15 +1058,20 @@ progressions that contain primarily root motion by thirds. Chapter 3 will
 draw upon this literature to approach jazz, especially common after
 bebop, that is more dependent on thirds than fifths for structure. Though
 harmony is crucially important to performing jazz musicians, much of the jazz
-pedagogical literature equate chords with scales: a \h{Dm7} chord is
+pedagogical literature equates chords with scales: a \h{Dm7} chord is
 functionally equivalent to a D dorian scale, for example. Chapter 4 will
 develop a transformational approach for these “chord-scales,” treating scales
 as first-class harmonic objects. Finally, Chapter 5 will bring the theoretical
 work of the early chapters to a close, by taking a close analytic look at
 tunes based on George Gershwin’s “I Got Rhythm.”
 
+
+
 % }}}}
 
 %}}}
 
+%%% Local Variables:
+%%% TeX-master: "diss"
+%%% End:
 % vim:fdm=marker
